--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>Skull Island Records</h1>
       <nav>
         <a href="#">MUSIC</a>
-        <a href="#">UPCOMING RELEASES</a>
+        <a href="upcoming.html">UPCOMING RELEASES</a>
         <a href="#">EVENTS</a>
         <a href="artists.html">ARTISTS</a>
         <a href="#">BLOG</a>
