--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
       <nav>
         <a href="#">MUSIC</a>
         <a href="upcoming.html">UPCOMING RELEASES</a>
-        <a href="#">EVENTS</a>
+        <a href="events.html">EVENTS</a>
         <a href="artists.html">ARTISTS</a>
+        <a href="about.html">ABOUT</a>
         <a href="#">BLOG</a>
         <a href="#">CONTACT</a>
         <button id="modoOscuroBtn">
@@ -117,7 +118,10 @@
         <div class="tarjeta">
           <img src="/src/img/fot.jpeg" alt="Imagen 2" />
           <div class="tarjeta-descripcion">
-            <p>Descripción de la tarjeta 2.</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Repellat, fugiat!
+            </p>
           </div>
           <div class="tarjeta-iconos">
             <i class="fa-brands fa-spotify"></i>
@@ -127,9 +131,12 @@
         </div>
 
         <div class="tarjeta">
-          <img src="imagen2.jpg" alt="Imagen 2" />
+          <img src="/src/img/fot.jpeg" alt="Imagen 2" />
           <div class="tarjeta-descripcion">
-            <p>Descripción de la tarjeta 2.</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Repellat, fugiat!
+            </p>
           </div>
           <div class="tarjeta-iconos">
             <i class="fa-brands fa-spotify"></i>
@@ -139,9 +146,12 @@
         </div>
 
         <div class="tarjeta">
-          <img src="imagen2.jpg" alt="Imagen 2" />
+          <img src="/src/img/fot.jpeg" alt="Imagen 2" />
           <div class="tarjeta-descripcion">
-            <p>Descripción de la tarjeta 2.</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Repellat, fugiat!
+            </p>
           </div>
           <div class="tarjeta-iconos">
             <i class="fa-brands fa-spotify"></i>
@@ -151,9 +161,12 @@
         </div>
 
         <div class="tarjeta">
-          <img src="imagen2.jpg" alt="Imagen 2" />
+          <img src="/src/img/fot.jpeg" alt="Imagen 2" />
           <div class="tarjeta-descripcion">
-            <p>Descripción de la tarjeta 2.</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Repellat, fugiat!
+            </p>
           </div>
           <div class="tarjeta-iconos">
             <i class="fa-brands fa-spotify"></i>
@@ -163,9 +176,12 @@
         </div>
 
         <div class="tarjeta">
-          <img src="imagen2.jpg" alt="Imagen 2" />
+          <img src="/src/img/fot.jpeg" alt="Imagen 2" />
           <div class="tarjeta-descripcion">
-            <p>Descripción de la tarjeta 2.</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Repellat, fugiat!
+            </p>
           </div>
           <div class="tarjeta-iconos">
             <i class="fa-brands fa-spotify"></i>
@@ -175,9 +191,12 @@
         </div>
 
         <div class="tarjeta">
-          <img src="imagen2.jpg" alt="Imagen 2" />
+          <img src="/src/img/fot.jpeg" alt="Imagen 2" />
           <div class="tarjeta-descripcion">
-            <p>Descripción de la tarjeta 2.</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Repellat, fugiat!
+            </p>
           </div>
           <div class="tarjeta-iconos">
             <i class="fa-brands fa-spotify"></i>
