--- a/events.html
+++ b/events.html
@@ -13,7 +13,7 @@
     </header>
 
     <div class="card">
-      <img src="/src/img/fot.jpeg" alt="Descripción de la imagen" />
+      <img src="/src/img/fot.webp" alt="Descripción de la imagen" />
       <div class="card-details">
         <h2>19/12/2023</h2>
         <p>
@@ -25,7 +25,7 @@
     </div>
 
     <div class="card">
-      <img src="/src/img/fot.jpeg" alt="Descripción de la imagen" />
+      <img src="/src/img/fot.webp" alt="Descripción de la imagen" />
       <div class="card-details">
         <h2>Detalles de la tarjeta</h2>
         <p>Descripción detallada de la tarjeta...</p>
@@ -33,7 +33,7 @@
     </div>
 
     <div class="card">
-      <img src="/src/img/fot.jpeg" alt="Descripción de la imagen" />
+      <img src="/src/img/fot.webp" alt="Descripción de la imagen" />
       <div class="card-details">
         <h2>Detalles de la tarjeta</h2>
         <p>Descripción detallada de la tarjeta...</p>
