--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
         </div>
 
         <div class="tarjeta">
-          <img src="/src/img/galaxyx.jpg" alt="Imagen Cancion Galaxy X" />
+          <img src="/src/img/galaxyx.png" alt="Imagen Cancion Galaxy X" />
           <div class="tarjeta-descripcion">
-            <p>sylenthmen - Galaxy X</p>
+            <p>sylenthmen - Galaxy X (Terror Bounce)</p>
           </div>
           <div class="tarjeta-iconos">
             <i class="fa-brands fa-spotify"></i>
@@ -116,22 +116,7 @@
         </div>
 
         <div class="tarjeta">
-          <img src="/src/img/fot.jpeg" alt="Imagen 2" />
-          <div class="tarjeta-descripcion">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Repellat, fugiat!
-            </p>
-          </div>
-          <div class="tarjeta-iconos">
-            <i class="fa-brands fa-spotify"></i>
-            <i class="fa-brands fa-youtube"></i>
-            <i class="fa-solid fa-music"></i>
-          </div>
-        </div>
-
-        <div class="tarjeta">
-          <img src="/src/img/fot.jpeg" alt="Imagen 2" />
+          <img src="/src/img/fot.webp" alt="Imagen 2" />
           <div class="tarjeta-descripcion">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -146,7 +131,7 @@
         </div>
 
         <div class="tarjeta">
-          <img src="/src/img/fot.jpeg" alt="Imagen 2" />
+          <img src="/src/img/fot.webp" alt="Imagen 2" />
           <div class="tarjeta-descripcion">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -161,7 +146,7 @@
         </div>
 
         <div class="tarjeta">
-          <img src="/src/img/fot.jpeg" alt="Imagen 2" />
+          <img src="/src/img/fot.webp" alt="Imagen 2" />
           <div class="tarjeta-descripcion">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -176,7 +161,7 @@
         </div>
 
         <div class="tarjeta">
-          <img src="/src/img/fot.jpeg" alt="Imagen 2" />
+          <img src="/src/img/fot.webp" alt="Imagen 2" />
           <div class="tarjeta-descripcion">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -191,7 +176,22 @@
         </div>
 
         <div class="tarjeta">
-          <img src="/src/img/fot.jpeg" alt="Imagen 2" />
+          <img src="/src/img/fot.webp" alt="Imagen 2" />
+          <div class="tarjeta-descripcion">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Repellat, fugiat!
+            </p>
+          </div>
+          <div class="tarjeta-iconos">
+            <i class="fa-brands fa-spotify"></i>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-solid fa-music"></i>
+          </div>
+        </div>
+
+        <div class="tarjeta">
+          <img src="/src/img/fot.webp" alt="Imagen 2" />
           <div class="tarjeta-descripcion">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
