--- a/upcoming.html
+++ b/upcoming.html
@@ -19,13 +19,34 @@
     <div class="card-container">
       <div class="card">
         <img
-          src="/src/img/upcoming/psynowport.png"
+          src="/src/img/upcoming/psynowport.webp"
           alt="Imagen de la tarjeta"
         />
         <div class="content">
           <h2>sylenthmen</h2>
           <p>Psynow</p>
           <p class="desp">Available on 19/12/2023 <br /></p>
+        </div>
+        <div class="social-icons">
+          <a href="#" target="_blank"><i class="fa-brands fa-spotify"></i></a>
+          <a href="#" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+          <a href="#" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+          <a href="#" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#" target="_blank"><i class="fa-brands fa-apple"></i></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-container">
+      <div class="card">
+        <img
+          src="/src/img/upcoming/smash heart.webp"
+          alt="Imagen de la tarjeta"
+        />
+        <div class="content">
+          <h2>sylenthmen</h2>
+          <p>Smash Heart</p>
+          <p class="desp">Available on 01/2024 <br /></p>
         </div>
         <div class="social-icons">
           <a href="#" target="_blank"><i class="fa-brands fa-spotify"></i></a>
